--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="topContainer">
       <img src="images/cloud.png" class="top-cloud" alt="Clods">
-      <h1>I'm Manish</h1>
+      <h1>I'm Manish Teotia</h1>
       <h2><span class="profession"><p>A Web Developer</p></span></h2>
      <img src="images/cloud.png" class="bottom-cloud" alt="Clouds">
      <img src="images/mountain.png" alt="Mountains">
